--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
     
     background-color: black;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
     h2{
         font-size:5px ;
     }    
