--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html{
     
     background-color: black;
 }
-@media screen and (max-width: 480px) {
+@media(max-width:480px){
     h2{
-        font-size:5px ;
+        font-size:25px ;
     }    
 }
