--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 h2{
     text-align: center;
     font-size: 99px;
-    margin-top: 20%;
     color: #00ffee;
 }
 html{
@@ -16,4 +15,17 @@ h2:hover{
     transition: 0.5s ease-in;
     text-shadow: 5px 5px 5px  #afaeae9f;
     font-size: 120px;
+}
+body{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+img{
+    padding: 0px;
+    margin-top: 5px;
+    height: 25%;
+    width: 25%;
+    margin-bottom: 0px;
+
 }
