--- a/style.css
+++ b/style.css
@@ -13,11 +13,10 @@ html {
     h2 {
         font-size: 25px;
     }
-
-    img:hover {
-        height: 15%;
-        width: 15%;
+    h2:hover{
+        font-size: 65px;
     }
+    
 }
 
 h2:hover {
