--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h2 {
 
 html {
     background-color: black;
+    box-sizing: border-box;
 }
 
 @media(max-width:480px) {
@@ -21,7 +22,6 @@ html {
 
 h2:hover {
     transition: 0.5s ease-in;
-    text-shadow: 3px 2px 4px #ffffff;
     font-size: 110px;
 }
 
