--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
-h2 {
-    padding: 0px;
-    text-align: center;
-    font-size: 99px;
-    color: #00ffee;
-}
-html {
+html{
     background-color: black;
-    box-sizing: border-box;
+}
+body{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+h2{
+    color: white;
+    font-size: 75px;
+
 }
 @media(max-width:480px) {
     h2 {
         font-size: 25px;
     }
     
-}
-body {
-    text-align: center;
 }
